# pdftomarkdown

./: .gitignore  README.md  docs.md  pyproject.toml
examples/: kaggle_marker_gemini.py
src/pdftomarkdown/: __init__.py  __main__.py  cli.py  config.py  kaggle.py  models.py  pipeline.py  preflight.py  repair.py  scoring.py
src/pdftomarkdown/backends/: __init__.py  base.py  marker.py  mineru.py
tests/: test_cli.py  test_kaggle.py  test_marker_backend.py  test_pipeline.py  test_scoring.py
